// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Freshly Created Course prompt preview renders and matches snapshot 1`] = `
<C>
  <FreshlyCreatedCourse
    ux={
      PreviewOnboarding {
        "course": Object {},
        "dismissNag": [MockFunction],
        "isDismissed": false,
        "otherModalsAreDisplaying": false,
        "priority": 3,
        "tourContext": Object {},
      }
    }
  />
</C>
`;

exports[`Freshly Created Course prompt student renders and matches snapshot 1`] = `
<C>
  <FreshlyCreatedCourse
    ux={
      StudentCourseOnboarding {
        "codeRedeemed": false,
        "course": Object {},
        "dismissNag": [MockFunction],
        "displayPayment": false,
        "displayPaymentOptions": false,
        "displayRedeemCode": false,
        "displayTrialActive": false,
        "isDismissed": false,
        "needsTermsSigned": false,
        "otherModalsAreDisplaying": false,
        "paymentCode": Object {
          "code": "",
          "courseId": undefined,
          "redeemed_at": "1970-01-01T00:00:00.000Z",
        },
        "paymentCodeError": "",
        "paymentCodePost": "",
        "paymentCodePrefix": "",
        "priority": 3,
        "tourContext": Object {},
      }
    }
  />
</C>
`;
